# Clap

./: .gitignore  README.md  clap_program_dashboard.xlsx
workflow-llm-dataset/Chatgpt_2/: pyproject.toml
workflow-llm-dataset/Chatgpt_2/configs/: demo_usb.yaml  settings.yaml
workflow-llm-dataset/Chatgpt_2/context/: target_industries.md
workflow-llm-dataset/Chatgpt_2/docs/: CAPABILITY_RUNTIME_BOUNDARIES.md  DEVLAB_OPERATOR_RUNBOOK.md  EDGE_DEVICE_PLAN.md  FIRST_NARROW_RELEASE.md  M17_PRODUCT_DECISION.md  M18_M20_EXECUTION_SUMMARY.md  M21_PILOT_EXECUTION.md  M22C_REVIEW_LANES_VALIDATION.md  M22D_INTAKE_VALIDATION.md  M22E_F5_DELIVERY.md  M22E_F6_DELIVERY.md  M22E_WORKFLOW_COMPOSER_READ_FIRST.md  M23A_CHAIN_LAB.md  M23A_CHAIN_LAB_REUSE_MAP.md  M23A_CHAIN_LAB_SAMPLES.md  M23A_CHAIN_LAB_SUMMARY.md  M23A_CHAIN_LAB_VALIDATION.md  M23B_EDGE_READINESS.md  M23C_F1_DELIVERY.md  M23C_F2_DELIVERY.md  M23D_F1_DELIVERY.md  M23F_F1_READ_FIRST.md  M23H_FINAL_OUTPUT.md  M23H_READ_FIRST.md  M23I_DESKTOP_BENCH_OPERATOR.md  M23J_JOB_PACKS_OPERATOR.md  M23K_COPILOT_OPERATOR.md  M23L_FINAL_OUTPUT.md  M23M_READ_FIRST.md  M23N_ONBOARDING_ANALYSIS.md  M23O_DAILY_INBOX_ANALYSIS.md  M23P_MACRO_COMPOSER.md  M23P_MACRO_COMPOSER_ANALYSIS.md  M23Q_TRUST_COCKPIT.md  M23S_RUNTIME_MANAGER.md  M23U_USER_BOOTSTRAP_AND_DOMAIN_PACKS.md  M23V_DAILY_COPILOT.md  M23X_PRE_CODING_ANALYSIS.md  M23Y_STARTER_KITS_ANALYSIS.md  M23_INTEGRATION_PANE_REPORT.md  (+157 more)
workflow-llm-dataset/Chatgpt_2/prompts/: 01_SOURCE_AUTHORITY.md  RUN_CURSOR.md
workflow-llm-dataset/Chatgpt_2/scripts/: check_llm_setup.sh  (+3 more)
(+1903 files in other folders)
