[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-llm-dataset"
version = "0.1.0"
description = "Primary-source-first workflow dataset builder for LLM development"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "pyarrow>=15.0",
  "openpyxl>=3.1",
  "xlsxwriter>=3.2",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "rapidfuzz>=3.9",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "rich>=13.7",
  "python-dateutil>=2.9",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.8",
  "ruff>=0.5",
]

[project.scripts]
workflow-dataset = "workflow_dataset.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "slow: marks tests that may be slow or touch deep dependency chains (run with -m 'not slow' for fast only)",
  "integration: marks tests that hit real repo commands or long timeouts",
]
